[package]
name = "canyon_scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
scraper = { version = "0.13" }
line-bot-sdk-rust = { git = "https://github.com/tony84727/line-bot-sdk-rust.git", branch = "upgrade_crates" }
dotenv = "0.15.0"